# ew-translator

./: CHANGELOG.md  Cargo.toml  README.md  tauri.conf.json  video.webm
gui/: index.html  package-lock.json  package.json
gui/src/: App.svelte  app.css
src/: gui.rs  hotkey.rs  main.rs  settings.rs  translator.rs
