[package]
name = "translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11-dl = "2.18.1"
reqwest = "0.11.10"
tokio = { version = "1", features = ["rt-multi-thread","macros"] }
gjson = "0.8"
notify-rust = "4"
urlencoding = "2.1.0"
lazy_static = "1.4.0"

[profile.release]
opt-level = "z" 
lto = true

# compress binary:
# upx --best --lzma target/release/translator